<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.wolfpack.cmpsc488.a475layouts.TeacherPage">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarTeacherPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarTeacherPage"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="@color/colorTeacherPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/title_activity_teacher_page" />


        <android.support.design.widget.TabLayout
            android:id="@+id/teacherPageTabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTeacherPrimary">

            <android.support.design.widget.TabItem
                android:id="@+id/tabProfClassList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher_page_tab1_classlist" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabProfCreateClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher_page_tab2_createclass" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabProfSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher_page_tab3_settings" />

        </android.support.design.widget.TabLayout>



    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/teacherPageViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</android.support.design.widget.CoordinatorLayout>


