<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--xmlns:tools="http://schemas.android.com/tools"-->

    <EditText
        android:id="@+id/classIdSearchEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/classTitle"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:imeOptions="normal"
        android:nextFocusRight="@id/classTeacherFirstNameEditText"
        android:layout_marginRight="8dp" />

    <EditText
        android:id="@+id/classTeacherFirstNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:imeOptions="normal"
        android:nextFocusRight="@id/classTeacherLastNameEditText"
        app:layout_constraintEnd_toStartOf="@+id/classTeacherLastNameEditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classIdSearchEditText" />

    <EditText
        android:id="@+id/classTeacherLastNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/classTeacherFirstNameEditText"
        app:layout_constraintTop_toTopOf="@+id/classTeacherFirstNameEditText" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/sectionResults"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:focusable="auto"
        android:foregroundGravity="center_vertical"
        android:isScrollContainer="true"
        android:nestedScrollingEnabled="true"
        android:scrollIndicators="bottom"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        android:verticalScrollbarPosition="right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classTeacherFirstNameEditText" />


</android.support.constraint.ConstraintLayout>